2007-08-20  Adam Nemet  <anemet@caviumnetworks.com>

	* config/mips/predicates.md (const_call_insn_operand): Invoke
	SYMBOL_REF_LONG_CALL_P only on SYMBOL_REFs.

2007-08-17  Chen liqin  <liqin@sunnorth.com.cn>

        * config/score/score.md : Update pattern tablejump.
        * config/score/score.c : Update score_initialize_trampoline 
        function.
        * config/score/score.h (TRAMPOLINE_TEMPLATE): Added macro.
        (TRAMPOLINE_INSNS, TRAMPOLINE_SIZE) Update macro.
        * doc/contrib.texi: Add my entry.

2007-08-02  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.md ("*xordi3_cconly"): Change xr to xg.

2007-08-01  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.md (TF in GPR splitter): Change operand_subword
	parameter to TFmode.

2007-07-30  Mark Mitchell  <mark@codesourcery.com>

	* BASE-VER: Bump.
	* DEV-PHASE: Mark as prerelease.

2007-07-25  Steve Ellcey  <sje@cup.hp.com>

	PR target/32218
	* tree-vect-patterns.c (vect_pattern_recog_1): Check for valid type.

2007-07-25  Dorit Nuzman  <dorit@il.ibm.com>
	    Devang Patel  <dpatel@apple.com>

	PR tree-optimization/25413
	* targhooks.c (default_builtin_vector_alignment_reachable): New.
	* targhooks.h (default_builtin_vector_alignment_reachable): New.
	* tree.h (contains_packed_reference): New.
	* expr.c (contains_packed_reference): New.
	* tree-vect-analyze.c (vector_alignment_reachable_p): New.
	(vect_enhance_data_refs_alignment): Call
	vector_alignment_reachable_p.
	* target.h (vector_alignment_reachable): New builtin.
	* target-def.h (TARGET_VECTOR_ALIGNMENT_REACHABLE): New.
	* config/rs6000/rs6000.c (rs6000_vector_alignment_reachable): New.
	(TARGET_VECTOR_ALIGNMENT_REACHABLE): Define.

2007-07-24  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2007-07-16  Richard Guenther  <rguenther@suse.de>
		    Uros Bizjak  <ubizjak@gmail.com>

	* tree-if-conv.c (find_phi_replacement_condition): Unshare "*cond"
	before forcing it to gimple operand.
