@@ -1,3 +1,9 @@
+2007-08-22  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/32563
+	* tree.c (host_integerp): Treat sizetype as signed as it is
+	sign-extended.
+
 2007-08-20  Adam Nemet  <anemet@caviumnetworks.com>
 
 	* config/mips/predicates.md (const_call_insn_operand): Invoke
